--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <div class="tile">
+        <img class="brand" src="images/brand.png" alt="Instagram brand" />
+        <button class="btn">
+          <img class="home" src="images/home.png" alt="home" />
+          <b>Log in</b>
+        </button>
+      </div>
+    </header>
+    <main>
+      <img class="phones" src="images/phones.png" alt="phones" />
+      <div class="valuep">
+        <h1 class="title">Capture and Share<br> the World's Moments</h1>
+        <p class="par">Instagram is a <b>fast, beautiful </b>and<b> fun</b> way to share your life<br>
+          with friends and family.<br>
+          <br>
+          Take a picture or video, choose a filter to transform its look<br>
+          and feel, then post to Instagram &mdash; it's that easy. You can<br>
+          even share to Facebook, Twitter, Tumblr and more. It's a<br>
+          new way to see the world.<br>
+          <br>
+          Oh yeah, did we mention it's free?
+        </p>
+        <img class="appstore" src="images/badge-iphone.png" alt="App Store" />
+        <img class="gplay" src="images/badge-android.png" alt="Google play" />
+      </div>
+    </main>
+    <footer>
+      <ul class="links">
+        <li><a class="an" href="#">ABOUT US</a></li>
+        <li><a class="an" href="#">SUPPORT</a></li>
+        <li><a class="an" href="#">BLOG</a></li>
+        <li><a class="an" href="#">PRESS</a></li>
+        <li><a class="an" href="#">API</a></li>
+        <li><a class="an" href="#">JOBS</a></li>
+        <li><a class="an" href="#">TERMS</a></li>
+        <li class="copy">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </footer>
   </body>
 </html>
