--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main id="main-container">
+      <div class="container">
+        <img src="images/phones.png" alt="Phones">
+        <div class="right-column">
+          <!-- Logo Instagram -->
+          <div class="logo">
+            <img src="images/brand.png" alt="Instagram logo">
+            <a href="#" class="login-button"><img src="images/home.png" alt="home button" class="button-image"> Log in</a>
+          </div>
+
+          <!-- Recuadro blanco -->
+          <div class="white-box">
+            <h2>Capture and Share<br>the World's Moments</h2>
+            <p>
+              Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+              friends and family. 
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
+              Oh yeah, did we mention it's free?
+            </p>
+
+            <!-- Botones de descarga -->
+            <div class="download-button">
+              <img src="images/badge-iphone.png" alt="App Store">
+              <img src="images/badge-android.png" alt="Google Play">
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <div class="footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+
   </body>
 </html>
