--- a/index.html
+++ b/index.html
@@ -1,16 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+
+</head>
+
+<body>
+  <main>
+
+    <!-- Section Left -->
+
+    <div>
+      <img id="phones" src="images/phones.png" alt="phones">
+    </div>
+
+    <!-- Section Right -->
+
+    <section>
+
+      <div>
+
+        <img id="instagram" src="img/../images/brand.png" alt="Instagram" class="instagram">
+        <button type="button"><a href=""><img src="img/../images/home.png">Log in</a></button>
+
+      </div>
+
+      <div class="box">
+
+        <h1>Capture and Share<br> the World's Moments</h1>
+        <p>Instagram is a <strong> fast, beautiful </strong> and <strong>fun</strong> way to share your life with
+          friends
+          and family.</p>
+        <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+
+      </div>
+
+      <div id="apps">
+
+        <img src="img/../images/badge-iphone.png" alt="iphone">
+        <img src="img/../images/badge-android.png" alt="android">
+
+      </div>
+
+    </section>
+
+    <!-- Section Footer -->
+
+    <footer>
+
+      <nav>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">Jobs</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+          <li class="copyright">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+
+    </footer>
+
+  </main>
+
+</body>
+
 </html>
