--- a/index.html
+++ b/index.html
@@ -4,13 +4,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <div class="background">
+
+      <div class="container">
+        
+        <div class="mobile"><img src="/images/phones.png" alt="phones"></div>
+
+        <main>
+
+          <div class="brand">
+
+            <img src="/images/brand.png" alt="brand">
+
+            <div class="login">
+              <img src="/images/home.png" alt="login">
+              <p>Log in</p>
+            </div>
+
+          </div>
+
+          <div class="present">
+
+            <article class="moments">
+
+              <h2>Capture and Share <br>the World's Moments</h2>
+              <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+
+            </article>
+
+            <div class="apps">
+
+              <img src="/images/badge-iphone.png" alt="app store button">
+              <img src="/images/badge-android.png" alt="google play button">
+
+            </div>
+
+          </div> <!-- present -->
+
+        </main>
+        
+      </div> <!-- container -->
+
+      <footer>
+
+        <nav>
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+        </nav>
+
+        <p>&copy; 2014 Instagram</p>
+
+      </footer>
+
+    </div> <!-- background -->
+
   </body>
+
 </html>
+
+<!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+&mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+Jobs Privacy Terms &copy; 2014 Instagram -->
