--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css"/>
   </head>
+  
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="principal">
+      <div class="phones">
+        <img src="images/phones.png" alt="phones" />
+      </div>
+      <div class="logo">
+        <div>
+          <div class="instagram">
+            <img src="images/brand.png" alt="logo" />
+            <button>
+              <img src="images/home.png" alt="home" />
+              <p> Log in </p>
+            </button>  
+          </div>
+        </div>  
+        <div class="card">
+          <div>
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram it's that easy. 
+              You can even share to Facebook, Twitter, Tumblr and more.It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free? </p>
+          </div>
+          <div class="botones">
+            <img src="images/badge-iphone.png" alt="Download on the App Store" />
+            <img src="images/badge-android.png" alt="Get it on Google Play" />
+          </div>
+          
+        </div>
+      </div>
+    </div> 
+    <footer>
+      <ul>
+        <li class="azul">About Us</li>
+        <li class="azul">Support</li>
+        <li class="azul">Blog</li>
+        <li class="azul">Press</li>
+        <li class="azul">API</li>
+        <li class="azul">Jobs</li>
+        <li class="azul">Privacy</li>
+        <li class="azul">Terms</li>
+        <li class="gris">2014 Instagram</li>
+      </ul>
+    </footer> 
+  <div class="vspacing60"></div>
   </body>
 </html>
