Adding fpr Tomás Review

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <main>
+    <main class="main-flow">
       <img src="images/phones.png" alt="Instragam App" class="main-content" style="border: 1px solid black;"/>
       <section id="content" class="flex-colum-start" style="border: 1px solid black;">
         <div class="flex-row-space-bt">
