PreCommit attending response of Tomá

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <main class="main-flow">
-      <img src="images/phones.png" alt="Instragam App" class="main-content" style="border: 1px solid black;"/>
-      <section id="content" class="flex-colum-start" style="border: 1px solid black;">
-        <div class="flex-row-space-bt">
+    <main class="main-flow" id="main">
+      <img src="images/phones.png" alt="Instragam App"/>
+      <section id="content" class="content">
+        <div class="logoLogIn">
           <img src="images/brand.png" alt="Intagram Logo"/>
-          <div class="flex-row-space-bt">
+          <div class="logIn">
             <img src="images/home.png" alt="Home" />
-            <p>Log in</p>
+            <span>Log in</span>
           </div>
         </div>
         <div class="roundedBox">
@@ -28,7 +29,7 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="flex-row-space-bt">
+      <ul class="footer-menu">
         <li>About Us</li>
         <li>Support</li>
         <li>Blog</li>
@@ -37,9 +38,8 @@
         <li>Jobs</li>
         <li>Privacy</li>
         <li>Terms</li>
-        <li>&copy; 2014 Instagram</li>
+        <li class="copy">&copy; 2014 Instagram</li>
       </ul>
     </footer>
- Support Blog Press API
   </body>
 </html>
