--- a/index.html
+++ b/index.html
@@ -4,13 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main class="main-flex">
+      <div class="phones">
+        <img src="images/phones.png" alt="android phone and iphone">
+      </div>
+      <section>
+        <div class="login">
+          <div>
+            <img src="images/brand.png" alt="logo">
+          </div>
+          <div class="button-login">
+            <div>
+                <img src="images/home.png" alt="home">
+            </div>
+            <a href="#"><b>Log in</b></a>
+          </div>
+        </div>
+        <div class="insta-intro">
+          <h1> Capture and Share <br> the World's Moments </h1>
+          <p> Instagram Capture and Share the World's Moments Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family. 
+            <br>
+            <br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br>
+            <br>
+            Oh yeah, did we mention it's free? </p>
+            <div class="store-links">
+              <div>
+                <img src="images/badge-iphone.png" alt="iphone">
+              </div>
+              <div>
+                <img src="images/badge-android.png" alt="android">
+              </div>
+            </div>
+          </div>
+      </section>
+    </main>
+
+      <footer>
+        <section class="footer-elements">
+          <ul class="footer-nav">
+            <li>ABOUT US</li>
+            <li>SUPPORT</li>
+            <li>BLOG</li>
+            <li>PRESS</li>
+            <li>API</li>
+            <li>JOBS</li>
+            <li>PRIVACY</li>
+            <li>TERMS</li>
+          </ul>
+          <div>
+            <p>&copy; 2014 Instagram</p>
+          </div>
+      </section>
+      </footer>
+    </main>
   </body>
 </html>
