--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/style.css">
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+</head>
+
+<body>
+  <main>
+    <div class="top">
+      <div class="container-1" id="top__container">
+      <div class="top__image"></div>
+      <a href="/">
+        <div class="top__btn-login">
+          <img src="./images/home.png">
+          <p>Log in</p>
+        </div>
+      </a>
+    </div>
+  </div>
+    <div class="bot">
+      <article class="container-1" id="description">
+        <div class="article__text">
+          <h1>Capture and Share<br>the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.<br><br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="article__container-btns">
+          <div class="article__btn" id="ios"></div>
+          <div class="article__btn" id="android"></div>
+        </div>
+      </article>
+    </div>
+    <div class="phone-img"></div>
+  </main>
+  <footer>
+    <ul class="footer">
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li id="copy">&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
