Falta el footer

--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
+    <!--
     Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram -->
+    <section class="bg-ing">
+      <div>
+        <img src="images/phones.png" alt="telephones">
+      </div>
+      <div class="informacion">
+        <!--Div hijo del logo-->
+        <div class="logoYboton">
+          <div>
+            <img src="images/brand.png" alt="Ing logo">
+          </div>
+          <div class="boton">
+            <a href="#"><img src="images/home.png" alt="Login icon">
+              Log in
+            </a>
+          </div>
+        </div>
+        <!--Hasta aquí Div hijo del logo y comienzo del copy-->
+        <article class="fondoBlanco">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>
+            Oh yeah, did we mention it's free?</p>
+
+            <div class="apps-logos">
+              <div>
+                <img src="images/badge-iphone.png" alt="logo badge-iphone">
+              </div>
+              <div id="separacion">
+                <img src="images/badge-android.png" alt="logo badge-android">
+              </div>
+            </div>
+        </article>
+      </div>
+      
+    </section>
+    <section>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
+    
   </body>
 </html>
