--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main class="container">
-    <img id="phones" src="/images/phones.png" alt="Phones images">
+    <img class="phones" src="/images/phones.png" alt="Phones images">
 
     <div class="info">
       <div class="brand">
@@ -18,23 +18,34 @@
         <button><img src="/images/home.png" alt="Home button">Log in</button>
       </div>
       <div class="text">
-        <h2>Capture and Share the World's Moments</h2>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
-          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <h2>Capture and Share<br> the World's Moments</h2>
+        <p>Instagram is a <span>fast</span>, <span> beautiful </span>and <span>fun</span> way to share your life <br>
+          with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash;
+          it's
+          that easy. You can <br>even share to Facebook, Twitter, Tumblr and more. It's a <br>new way to see the world.
+        </p>
         <p>Oh yeah, did we mention it's free?</p>
-      </div>
 
-      <div class="buttons">
-        <img src="/images/badge-iphone.png" alt="AppStore">
-        <img src="/images/badge-android.png" alt="GoogleStores">
+        <div class="buttons">
+          <img src="/images/badge-iphone.png" alt="AppStore">
+          <img src="/images/badge-android.png" alt="GoogleStores">
+        </div>
       </div>
-    </div>      
     </div>
   </main>
-
-  <!--Instagram  I Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram -->
+  <footer class="footer">
+    <div class="links">
+      <a href="#">ABOUT US</a>
+      <a href="#">SUPPORT</a>
+      <a href="#">BLOG</a>
+      <a href="#">PRESS</a>
+      <a href="#">API</a>
+      <a href="#">JOBS</a>
+      <a href="#">PRIVACY</a>
+      <a href="#">TERMS</a>
+    </div>
+    <p>&copy; 2014 Instagram</p>
+  </footer>
 </body>
-
 </html>
