--- a/index.html
+++ b/index.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main id="insta-main">
+      <section id="phones-image">
+        <img src="images/phones.png" alt="phones">
+      </section>
+      <section id="text-content">
+        <div id="logo-login">
+          <img src="images/brand.png" alt="instagram-logo">
+          <button class="button" id="log-in"> 
+            <img src="images/home.png" alt="home">
+            <h3>Log in</h3>
+          </button>
+        </div>
+        <article id="insta-publi">
+          <h1>Capture and Share
+            <br> 
+              the World's Moments
+          </h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </article>
+        <div id="badges">
+          <img src="images/badge-iphone.png" alt="IOS-badge">
+          <img src="images/badge-android.png" alt="android-badge"> 
+        </div>
+      </section>
+    </main>
+    <footer>Download on the App Store Get it on Google Play About Us Support Blog Press API
+      Jobs Privacy Terms &copy; 2014 Instagram
+    </footer>
   </body>
 </html>
