html structure refined, added image buttons and formated the footer. Styling of the page complete

--- a/index.html
+++ b/index.html
@@ -19,28 +19,41 @@
             <h3>Log in</h3>
           </button>
         </div>
-        <article id="insta-publi">
+        <article class="information" id="insta-publi">
           <h1>Capture and Share
             <br> 
               the World's Moments
           </h1>
           <p>
-            Instagram is a fast, beautiful and fun way to share your life with
-            friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.
+          </p>
+          <p> 
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
             &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
           </p>
           <p>
             Oh yeah, did we mention it's free?
           </p>
+          <div class="badges">
+            <input type="image" src="images/badge-iphone.png" alt="IOS-badge">
+            <input type="image" src="images/badge-android.png" alt="android-badge"> 
+          </div>
         </article>
-        <div id="badges">
-          <img src="images/badge-iphone.png" alt="IOS-badge">
-          <img src="images/badge-android.png" alt="android-badge"> 
-        </div>
       </section>
     </main>
-    <footer>Download on the App Store Get it on Google Play About Us Support Blog Press API
-      Jobs Privacy Terms &copy; 2014 Instagram
+    <footer class="footer"> 
+      <ul class="important-links">
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li class="copyright"><a href="#">&copy; 2014 Instagram</a></li>
+      </ul>        
     </footer>
   </body>
 </html>
