--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <figure>
+        <img src="images/phones.png" />
+      </figure>
+      <section>
+        <header>
+          <div><img src="images/brand.png" alt="Instagram" /></div>
+          <div>
+            <img src="images/home.png" />
+            <p>Log in</p>
+          </div>
+        </header>
+        <article>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to
+            transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more.
+            It's a new way to see the world. Oh yeah, did we mention it's free?
+          </p>
+        </article>
+        <nav>
+          <div>
+            <a href="#"
+              ><img
+                src="images/badge-iphone.png"
+                alt="Download on the App Store"
+            /></a>
+          </div>
+          <div>
+            <a href="#"
+              ><img src="images/badge-android.png" alt="Get it on Google Play"
+            /></a>
+          </div>
+        </nav>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <small><p>&copy; 2014 Instagram</p></small>
+    </footer>
   </body>
 </html>
