--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <!-- SECTION 1 - PHONE PICTURES  -->
+      <section class="phone-pictures-column-section">
+		  <img src="./images/phones.png" alt="Mobile Phones Pictures">        
+      </section>
+      <!-- SECTION 2 - LOGIN COLUMN -->
+      <section class="login-column-section">
+		<div class="login-container">
+			<img id="brand-img" src="./images/brand.png" alt="Instagram Brand Logo">
+			<a id="login-btn" href="#">
+				<img src="./images/home.png" alt="Home Icon">
+				Log in
+			</a>
+		</div>
+		<article class="login-article">
+			<header class="login-article-header">
+				<h1>Capture and Share <br>
+					the World's Moments
+				</h1>
+			</header>
+			<p>Instagram is a fast, beautiful and fun way to share your life with friends and family</p>
+			<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+			&mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+			<p>Oh yeah, did we mention it's free?</p>
+			<!-- Aquí tengo dudas sobre si incluir el <div> dentro del artículo o fuera de él -->
+				<div>
+					<a href="#"><img src="./images/badge-iphone.png" alt="Download on App Store Logo"></a>
+					<a href="#"><img src="./images/badge-android.png" alt="Download on Google Play Logo"></a>
+				</div>
+		</article>
+      </section>
+    </main>
+	<footer>
+		<ul class="footer-nav-items">
+			<li><a href="#">About Us</a></li>
+			<li><a href="#"></a>Support</li>
+			<li><a href="#"></a>Blog</li>
+			<li><a href="#"></a>Press</li>
+			<li><a href="#"></a>API</li>
+			<li><a href="#"></a>Jobs</li>
+			<li><a href="#"></a>Privacy</li>
+			<li><a href="#"></a>Terms</li>
+		</ul>
+		<small>&copy; 2014 Instagram</small>
+	</footer>
   </body>
 </html>
