flexbox structural styling done in main

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <img src="images/phones.png" />
       </figure>
       <section>
-        <header>
-          <div><img src="images/brand.png" alt="Instagram" /></div>
-          <div>
+        <header class="flex-container">
+          <div class="logo"><img src="images/brand.png" alt="Instagram" /></div>
+          <div class="login-button">
             <img src="images/home.png" />
             <p>Log in</p>
           </div>
@@ -23,13 +23,19 @@
           <h1>Capture and Share the World's Moments</h1>
           <p>
             Instagram is a fast, beautiful and fun way to share your life with
-            friends and family. Take a picture or video, choose a filter to
+            friends and family. 
+          </p>
+          <p>
+            Take a picture or video, choose a filter to
             transform its look and feel, then post to Instagram &mdash; it's
             that easy. You can even share to Facebook, Twitter, Tumblr and more.
-            It's a new way to see the world. Oh yeah, did we mention it's free?
+            It's a new way to see the world. 
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
           </p>
         </article>
-        <nav>
+        <nav class="flex-container">
           <div>
             <a href="#"
               ><img
