--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
         <figure>
           <img src="images/brand.png" alt="IG Logo">
         </figure>
-        <div>
-          <img src="images/home.png" alt="Log In">
-          <a href="#" target="_blank">Log In</a>
+        <div id="login">
+          <a href="#" target="_blank"><img src="images/home.png" alt="Log In">Log In</a>
         </div>
       </article>
 
       <article id="white-box">
         <header>
-          <h1>Capture and Share the World's Moments</h1>
+          <h1>Capture and Share<br>the World's Moments</h1>
         </header>
         <p>
           Instagram is a fast, beautiful and fun way to share your life with
@@ -47,6 +46,7 @@
         <div id="badges">
           <img src="images/badge-iphone.png" alt="Download on the App Store">
           <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
       </article>
 
     </section>
@@ -64,7 +64,7 @@
         <li><a href="#">Jobs</a></li>
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
-        <li class="special">&copy; 2014 Instagram</li>
+        <li id="special">&copy; 2014 Instagram</li>
       </ul>
     </nav>
   </footer>
