--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+
     <main>
       <!-- SECTION 1 - PHONE PICTURES  -->
       <section class="phone-pictures-column-section">
 		  <img src="./images/phones.png" alt="Mobile Phones Pictures">        
-      </section>
+	  </section>
+	  
       <!-- SECTION 2 - LOGIN COLUMN -->
       <section class="login-column-section">
 		<div class="login-container">
@@ -38,17 +40,19 @@
 				</div>
 		</article>
       </section>
-    </main>
+	</main>
+	
+	<!-- FOOTER  -->
 	<footer>
 		<ul class="footer-nav-items">
 			<li><a href="#">About Us</a></li>
-			<li><a href="#"></a>Support</li>
-			<li><a href="#"></a>Blog</li>
-			<li><a href="#"></a>Press</li>
-			<li><a href="#"></a>API</li>
-			<li><a href="#"></a>Jobs</li>
-			<li><a href="#"></a>Privacy</li>
-			<li><a href="#"></a>Terms</li>
+			<li><a href="#">Support</a></li>
+			<li><a href="#">Blog</a></li>
+			<li><a href="#">Press</a></li>
+			<li><a href="#">API</a></li>
+			<li><a href="#">Jobs</a></li>
+			<li><a href="#">Privacy</a></li>
+			<li><a href="#">Terms</a></li>
 		</ul>
 		<small>&copy; 2014 Instagram</small>
 	</footer>
