--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           Oh yeah, did we mention it's free?
         </p>
         <div id="badges">
-          <img src="images/badge-iphone.png" alt="Download on the App Store">
-          <img src="images/badge-android.png" alt="Get it on Google Play">
+          <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+          <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
         </div>
       </article>
 
