basic structural styling on footer, styling of text box

--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
         <header class="flex-container">
           <div class="logo"><img src="images/brand.png" alt="Instagram" /></div>
           <div class="login-button">
-            <img src="images/home.png" />
-            <p>Log in</p>
+            <a href="#">
+              <img src="images/home.png" />
+              <p>Log in</p>
+            </a>
           </div>
         </header>
         <article>
           <h1>Capture and Share the World's Moments</h1>
           <p>
             Instagram is a fast, beautiful and fun way to share your life with
-            friends and family. 
+            friends and family.
           </p>
           <p>
-            Take a picture or video, choose a filter to
-            transform its look and feel, then post to Instagram &mdash; it's
-            that easy. You can even share to Facebook, Twitter, Tumblr and more.
-            It's a new way to see the world. 
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
           </p>
           <p>
             Oh yeah, did we mention it's free?
@@ -53,14 +55,14 @@
     </main>
     <footer>
       <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
       </ul>
       <small><p>&copy; 2014 Instagram</p></small>
     </footer>
