repositioned download links

--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
           <p>
             Oh yeah, did we mention it's free?
           </p>
+          <nav class="flex-container app-download-nav">
+            <div>
+              <a href="#"
+                ><img
+                  src="images/badge-iphone.png"
+                  alt="Download on the App Store"
+              /></a>
+            </div>
+            <div>
+              <a href="#"
+                ><img src="images/badge-android.png" alt="Get it on Google Play"
+              /></a>
+            </div>
+          </nav>
         </article>
-        <nav class="flex-container">
-          <div>
-            <a href="#"
-              ><img
-                src="images/badge-iphone.png"
-                alt="Download on the App Store"
-            /></a>
-          </div>
-          <div>
-            <a href="#"
-              ><img src="images/badge-android.png" alt="Get it on Google Play"
-            /></a>
-          </div>
-        </nav>
       </section>
     </main>
     <footer>
