--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link href="styles/style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <div>
+
+    <img class="phone" src="images/phones.png" alt="phones">
+
+    <img class="logo" src="images/brand.png" alt="logo">
+
+    <div class="button">
+      <a class="login" href="#">Log in</a>
+      <img class="home" src="images/home.png" alt="logo-home">
+    </div>
+
+    <main>
+      <div class="text">
+        <h1> Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+
+        <img src="images/badge-iphone.png" alt="apple-Store">
+        <img src="images/badge-android.png" alt="android-store">
+      </div>
+    </main>
+
+  </div>
+  <div class="terms">
+    <footer>
+      <a href="#">About us</a>
+      <a href="#">support</a>
+      <a href="#">blog</a>
+      <a href="#">press</a>
+      <a href="#">api</a>
+      <a href="#">jobs</a>
+      <a href="#">privacy</a>
+      <a href="#">terms</a>
+      &copy; 2014 Instagram
+
+    </footer>
+  </div>
+</body>
+
 </html>
