HTML has already been structured and main tag has style applied

--- a/index.html
+++ b/index.html
@@ -4,13 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" type="text/css" />
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <figure>
+        <img src="images/phones.png" alt="Telefonos con Instagram" />
+      </figure>
+
+      <section class="principal-section">
+        <header>
+          <a href="index.html">
+            <img src="images/brand.png" alt="Logotipo de Instagram" />
+          </a>
+          <a class="login-button" href="#">
+            <img src="images/home.png" alt="Icono home" />
+            Log in
+          </a>
+        </header>
+
+        <article class="information-box">
+          <header>
+            <h1>Capture and Share the World's Moments</h1>
+          </header>
+          <p>
+            Instagram is a <span class="bold-word">fast</span>,
+            <span class="bold-word">beautiful</span> and
+            <span class="bold-word">fun</span> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div>
+            <a class="store-button" href="#">
+              <img src="images/badge-iphone.png" alt="Icono App Store" />
+            </a>
+            <a href="#">
+              <img src="images/badge-android.png" alt="Icono Google Play" />
+            </a>
+          </div>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
