added styles and html structure

--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
+
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main class="layout">
+      <img src="./images/phones.png" alt="phones-with-instagram-app"/>
+       <section class="information"> 
+          <div class="btnLogo">
+            <img src="./images/brand.png" alt="brand-logo" />
+            <div class="btn">
+              <img src="./images/home.png" alt="placeholder-image"/> <span> 
+                <a  href="#" >Log In</a></span>
+            </div>
+          </div>
+          <article>
+          <h1> Capture and Share <br> the World's Moments</h1> 
+            <p> Instagram is a <b> fast, beautiful </b> and <b> fun </b> way to share your life with
+              friends and family. <br> 
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. 
+              <br>
+              Oh yeah, did we mention it's free? </p>
+          </article>
+          <div class="appDownload"> 
+          <img src="images/badge-iphone.png" alt="Download-app-I-OS" > 
+          <img src="images/badge-android.png" alt="Download-app-Android" > 
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Supoort</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>Api</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copyright">&copy; 2014 Instagram </li>
+      </ul>
+    </footer>
   </body>
 </html>
