Html y css terminados

--- a/index.html
+++ b/index.html
@@ -1,16 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+    <main>
+
+        <section>
+
+            <img src="images/phones.png" alt="Imagen teléfonos.">
+
+        </section>
+
+        <section class="content">
+
+            <header class="header-logo">
+
+                <a href="index.html"><img src="images/brand.png" alt="Logotipo"></a>
+
+                <a href="#" class="btn">
+                    <img src="images/home.png" alt="Log in">
+                    <span>Log in</span>
+                </a>
+
+            </header>
+
+            <section class="info">
+
+                <header>
+
+                    <h2>Capture and Share the World's Moments</h2>
+
+                </header>
+
+                <article>
+
+                    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                    </p>
+
+                    <p>
+                        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    </p>
+
+                    <p>
+                        Oh yeah, did we mention it's free?
+                    </p>
+
+
+                </article>
+
+                <article class="download-btn">
+
+                    <a href="#"><img src="images/badge-iphone.png" alt="Enlace App Store"></a>
+
+                    <a href="#"><img src="images/badge-android.png" alt="Enlace PlayStore"></a>
+
+                </article>
+
+            </section>
+
+
+
+
+        </section>
+
+
+
+    </main>
+
+    <footer>
+
+        <a href="#">About us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">Api</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#"><span class="copyrights">&copy; 2014 Instagram</span></a>
+
+    </footer>
+
+</body>
+
 </html>
