Footer style applied and general style has been retouched

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="store-button" href="#">
               <img src="images/badge-iphone.png" alt="Icono App Store" />
             </a>
-            <a href="#">
+            <a class="store-button" href="#">
               <img src="images/badge-android.png" alt="Icono Google Play" />
             </a>
           </div>
@@ -56,17 +56,19 @@
     </main>
 
     <footer>
-      <ul>
-        <li>About us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li>&copy; 2014 Instagram</li>
-      </ul>
+      <small>
+        <ul class="nav-bottom">
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </small>
     </footer>
   </body>
 </html>
